[gd_scene load_steps=2 format=3 uid="uid://pxeh6kyk26er"]

[ext_resource type="Script" path="res://scenes/map/map.gd" id="1_00pp3"]

[node name="Map" type="Node2D"]
script = ExtResource("1_00pp3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -29.0
offset_right = 60.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Map Scene"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Go to Battle
"

[node name="BattleRewardButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Go to Battle Reward
"

[node name="ShopButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Go to Shop
"

[node name="BrewingButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Go to Brewing
"
